--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/interval_network_attribute.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/interval_network_attribute.xml
@@ -7,7 +7,9 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView viewName="interval_network_attribute" schemaName="readable" replaceIfExists="true"><![CDATA[
-			 SELECT ba.id, 
+			 SELECT 
+                w.name AS workspace,
+                 ba.id, 
                     b.id AS network_rule, 
                     a.name AS attribute, 
                     ba.key AS key,
@@ -23,7 +25,9 @@
 			   JOIN interval_network b ON ba.network_rule = b.id
 			   JOIN attribute a ON ba.attribute = a.id
 			   LEFT JOIN unit u ON ba.unit = u.id
-			   JOIN agency up ON ba.updated_by = up.id;
+			   JOIN agency up ON ba.updated_by = up.id
+             LEFT JOIN ruleform.workspace_authorization wa ON ba.workspace = wa.id
+             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]>
         </createView>
         <rollback>
