--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
@@ -7,7 +7,9 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView schemaName="readable" viewName="job"><![CDATA[
-             SELECT base_table.id, 
+             SELECT 
+                w.name AS workspace,
+                 base_table.id, 
                     s.name AS service, 
                     r.name AS requester, 
                     p.name AS product,  
@@ -31,6 +33,8 @@
                JOIN status_code sc ON base_table.status = sc.id
                JOIN agency up ON base_table.updated_by = up.id
                JOIN unit u ON base_table.quantity_unit = u.id
+             LEFT JOIN ruleform.workspace_authorization wa ON base_table.workspace = wa.id
+             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]></createView>
         <rollback>
             <dropView viewName="readable.job" />
