--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency_attribute.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency_attribute.xml
@@ -7,7 +7,8 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView viewName="agency_attribute" schemaName="readable" replaceIfExists="true"><![CDATA[
-			 SELECT ra.id, 
+			 SELECT w.name AS workspace,
+                 ra.id, 
 			     r.name AS agency, 
 			     a.name AS attribute, 
                  ra.key AS key,
@@ -23,7 +24,9 @@
 			   JOIN agency r ON ra.agency = r.id
 			   JOIN attribute a ON ra.attribute = a.id
 			   LEFT JOIN unit u ON ra.unit = u.id
-			   JOIN agency up ON ra.updated_by = up.id;
+			   JOIN agency up ON ra.updated_by = up.id
+               LEFT JOIN ruleform.workspace_authorization wa ON ra.workspace = wa.id
+               LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]>
         </createView>
         <rollback>
