--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/location.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/location.xml
@@ -7,9 +7,11 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView viewName="location" schemaName="readable" replaceIfExists="true"><![CDATA[
-			 SELECT l.id, l.name, l.description, l.notes, r.name AS updated_by, l.version
+			 SELECT w.name AS workspace, l.id, l.name, l.description, l.notes, r.name AS updated_by, l.version
 			   FROM location l
-			   JOIN agency r ON l.updated_by = r.id; 
+			   JOIN agency r ON l.updated_by = r.id
+             LEFT JOIN ruleform.workspace_authorization wa ON r.workspace = wa.id
+             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]>
         </createView>
         <rollback>
