--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/network_inference.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/network_inference.xml
@@ -7,12 +7,14 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView viewName="network_inference" schemaName="readable" replaceIfExists="true"><![CDATA[
-			 SELECT c.id, r1.name AS premise1, r2.name AS premise2, r3.name AS inference, c.notes, up.name AS updated_by, c.version
+			 SELECT w.name AS workspace, c.id, r1.name AS premise1, r2.name AS premise2, r3.name AS inference, c.notes, up.name AS updated_by, c.version
 			   FROM network_inference c
 			   JOIN relationship r1 ON c.premise1 = r1.id
 			   JOIN relationship r2 ON c.premise2 = r2.id
 			   JOIN relationship r3 ON c.inference = r3.id
-			   JOIN agency up ON c.updated_by = up.id; 
+			   JOIN agency up ON c.updated_by = up.id
+             LEFT JOIN ruleform.workspace_authorization wa ON c.workspace = wa.id
+             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]>
         </createView>
         <rollback>
