--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_location.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_location.xml
@@ -7,13 +7,15 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView viewName="product_location" schemaName="readable" replaceIfExists="true"><![CDATA[
-			 SELECT bl.id, res.name AS agency, b.name AS product, rel.name AS relationship, l.name AS location, bl.notes, up.name AS updated_by, bl.version
+			 SELECT w.name AS workspace, bl.id, res.name AS agency, b.name AS product, rel.name AS relationship, l.name AS location, bl.notes, up.name AS updated_by, bl.version
 			   FROM product_location bl
 			   JOIN agency res ON bl.agency = res.id
 			   JOIN product b ON bl.product = b.id
 			   JOIN relationship rel ON bl.relationship = rel.id
 			   JOIN location l ON bl.location = l.id
 			   JOIN agency up ON bl.updated_by = up.id
+             LEFT JOIN ruleform.workspace_authorization wa ON bl.workspace = wa.id
+             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]>
         </createView>
         <rollback>
