--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_relationship.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_relationship.xml
@@ -7,12 +7,14 @@
 
     <changeSet id="2.0.0" author="hparry">
         <createView viewName="product_relationship" schemaName="readable" replaceIfExists="true"><![CDATA[
-			 SELECT bl.id, b.name AS product, rel.name AS relationship, l.name AS child, bl.notes, up.name AS updated_by, bl.version
+			 SELECT w.name AS workspace, bl.id, b.name AS product, rel.name AS relationship, l.name AS child, bl.notes, up.name AS updated_by, bl.version
 			   FROM product_relationship bl
 			   JOIN product b ON bl.product = b.id
 			   JOIN relationship rel ON bl.relationship = rel.id
 			   JOIN relationship l ON bl.child = l.id
 			   JOIN agency up ON bl.updated_by = up.id
+             LEFT JOIN ruleform.workspace_authorization wa ON bl.workspace = wa.id
+             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]>
         </createView>
         <rollback>
