--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship.xml
@@ -7,10 +7,12 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView schemaName="readable" viewName="relationship" replaceIfExists="true"><![CDATA[  
-			 SELECT rel.id, rel.name, rel.description, inv.name AS inverse, rel.notes, up.name AS updated_by
+			 SELECT w.name AS workspace, rel.id, rel.name, rel.description, inv.name AS inverse, rel.notes, up.name AS updated_by
 			   FROM relationship rel
 			   JOIN relationship inv ON rel.inverse = inv.id
 			   JOIN agency up ON rel.updated_by = up.id
+             LEFT JOIN ruleform.workspace_authorization wa ON rel.workspace = wa.id
+             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]>
         </createView>
         <rollback>
