--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/status_code.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/status_code.xml
@@ -7,9 +7,11 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView schemaName="readable" viewName="status_code" replaceIfExists="true"><![CDATA[ 
-			 SELECT base_table.id, base_table.name, base_table.description, base_table.notes, base_table.fail_parent, base_table.propagate_children, up.name AS updated_by, base_table.version
+			 SELECT w.name AS workspace, base_table.id, base_table.name, base_table.description, base_table.notes, base_table.fail_parent, base_table.propagate_children, up.name AS updated_by, base_table.version
 			   FROM status_code base_table
 			   JOIN agency up ON base_table.updated_by = up.id
+             LEFT JOIN ruleform.workspace_authorization wa ON base_table.workspace = wa.id
+             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]>
         </createView>
         <rollback>
