--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit_network_authorization.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit_network_authorization.xml
@@ -8,6 +8,8 @@
     <changeSet id="2.0.0" author="hparry">
         <createView schemaName="readable" viewName="unit_network_authorization" replaceIfExists="true"><![CDATA[ 
             SELECT 
+                w.name AS workspace,
+                auth.id,
                 classifier.name as classifier,
                 classification.name as classification,
                 bridge.name as child_relationship,
@@ -22,6 +24,8 @@
                 left join ruleform.unit authorized_parent on auth.authorized_parent = authorized_parent.id
                 left join ruleform.relationship authorized_rel on auth.authorized_relationship = authorized_rel.id
                 left join ruleform.agency res on auth.grouping_agency = res.id
+             LEFT JOIN ruleform.workspace_authorization wa ON auth.workspace = wa.id
+             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]>
         </createView>
         <rollback>
