--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_attribute.xml
@@ -16,9 +16,11 @@
 			     ra.integer_value, 
 			     ra.boolean_value, 
 			     ra.text_value, 
+                 ra.json_value, 
 			     u.name AS unit, 
 			     ra.notes,
 			     up.name AS updated_by, 
+                 ra.updated,
 			     ra.version
 			   FROM agency_attribute ra
 			   JOIN agency r ON ra.agency = r.id
