--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_location_attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_location_attribute.xml
@@ -16,9 +16,11 @@
                     ba.integer_value, 
                     ba.boolean_value, 
 			        ba.text_value, 
+                    ba.json_value, 
                     u.name AS unit,
                      ba.notes, 
-			        up.name AS updated_by, 
+			        up.name AS updated_by,  
+                    ba.updated,
 			        ba.version
 			   FROM agency_location_attribute ba
 			   JOIN attribute a ON ba.attribute = a.id
