--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/status_code_attribute_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/status_code_attribute_authorization.xml
@@ -17,7 +17,8 @@
                 natt.name AS authorized_network_attribute,
                 base_table.text_value, 
                 base_table.integer_value, 
-                base_table.numeric_value, 
+                base_table.numeric_value,
+                base_table.json_value,  
                 base_table.notes, 
                 up.name AS updated_by, 
                 base_table.version
