--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/unit_attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/unit_attribute.xml
@@ -17,9 +17,11 @@
                     ra.integer_value, 
                     ra.boolean_value, 
                     ra.text_value, 
+                    ra.json_value, 
                     u.name AS unit, 
                     ra.notes, 
                     up.name AS updated_by, 
+                    ra.updated, 
                     ra.version
 			   FROM unit_attribute ra
 			   JOIN unit r ON ra.unit_rf = r.id
