--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_network_attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_network_attribute.xml
@@ -17,9 +17,11 @@
                     ba.integer_value, 
                     ba.boolean_value, 
 			        ba.text_value, 
+                    ba.json_value, 
                     u.name AS unit,
-                     ba.notes, 
+                    ba.notes, 
 			        up.name AS updated_by, 
+                    ba.updated,
 			        ba.version
 			   FROM agency_network_attribute ba
 			   JOIN agency_network b ON ba.network_rule = b.id
