--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product_attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product_attribute.xml
@@ -17,9 +17,11 @@
                     ba.integer_value, 
                     ba.boolean_value, 
 			        ba.text_value, 
+                    ba.json_value, 
                     u.name AS unit, 
                     ba.notes, 
 			        up.name AS updated_by, 
+                    ba.updated,
 			        ba.version
 			   FROM product_attribute ba
 			   JOIN product b ON ba.product = b.id
