--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/protocol.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/protocol.xml
@@ -47,9 +47,7 @@
                JOIN ruleform.agency up ON base_table.updated_by = up.id
                LEFT JOIN ruleform.workspace_authorization wa ON base_table.workspace = wa.id
                LEFT JOIN ruleform.product w ON wa.defining_product = w.id
-            ]]></createView>
-        <rollback>
-            <dropView viewName="readable.protocol" />
-        </rollback>
+            ]]>
+        </createView>
     </changeSet>
 </databaseChangeLog>
